<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mains"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/wallpaperapplication"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/custom"
            android:fontFamily="@font/productsansmedium"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="55dp"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/mains"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_data3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robot"
                    android:text="@string/tb_main_wcback"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signupline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansmedium"
                    android:text="@string/tb_main_signnote"
                    android:textColor="@color/black"

                    android:textSize="15sp"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcome" />

                <EditText
                    android:id="@+id/signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColorHint="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/et_main_emailhint"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/cv_data3"
                    app:layout_constraintStart_toStartOf="@+id/cv_data3"
                    app:layout_constraintTop_toBottomOf="@id/signupline" />

                <EditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/black"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/et_main_passhint"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/cv_data3"
                    app:layout_constraintStart_toStartOf="@+id/cv_data3"
                    app:layout_constraintTop_toBottomOf="@+id/signin_email" />

                <ImageView
                    android:id="@+id/password_toggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@+id/signin_password"
                    android:layout_alignParentEnd="true"

                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/hide"
                    app:layout_constraintBottom_toBottomOf="@+id/signin_password"
                    app:layout_constraintEnd_toEndOf="@+id/signin_password"
                    app:layout_constraintTop_toTopOf="@+id/signin_password" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="50dp"
                    app:cardBackgroundColor="#D236C2FF"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/signin_password"
                    app:layout_constraintStart_toStartOf="@+id/signin_password"
                    app:layout_constraintTop_toBottomOf="@+id/signin_password">

                    <Button
                        android:id="@+id/signin_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:lineSpacingExtra="19.41sp"
                        android:padding="0dp"
                        android:text="@string/bt_main_SignIn"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_loginRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="8dp"
                    android:text="@string/tb_main_noaccount"
                    android:textColor="@color/custom"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/cv_button2"
                    app:layout_constraintStart_toStartOf="@+id/cv_button2"
                    app:layout_constraintTop_toBottomOf="@+id/cv_button2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
