<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/wallpaperapplication"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/productsansmedium"
            android:text="@string/tb_appname"
            android:textColor="@color/custom"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="65dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_data2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/robot"
                    android:text="@string/tb_welcome"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signupline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/productsansmedium"
                    android:text="@string/tb_signupline"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcome" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/tb_email"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/cl_data2"
                    app:layout_constraintStart_toStartOf="@id/cl_data2"
                    app:layout_constraintTop_toBottomOf="@id/signupline" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/tb_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/cl_data2"
                    app:layout_constraintStart_toStartOf="@id/cl_data2"
                    app:layout_constraintTop_toBottomOf="@+id/signup_email"
                    />

                <ImageView
                    android:id="@+id/password_toggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@+id/signup_password"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/hide"
                    app:layout_constraintBottom_toBottomOf="@+id/signup_password"
                    app:layout_constraintEnd_toEndOf="@+id/signup_password"
                    app:layout_constraintTop_toTopOf="@+id/signup_password" />

                <EditText
                    android:id="@+id/signup_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/text_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/tb_confirm_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/cl_data2"
                    app:layout_constraintStart_toStartOf="@id/cl_data2"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password" />
                <ImageView
                    android:id="@+id/confirmpassword_toggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@+id/signup_confirm"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/hide"
                    app:layout_constraintBottom_toBottomOf="@+id/signup_confirm"
                    app:layout_constraintEnd_toEndOf="@+id/signup_confirm"
                    app:layout_constraintTop_toTopOf="@+id/signup_confirm" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="70dp"
                    app:cardBackgroundColor="@color/custom"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/signup_confirm"
                    app:layout_constraintStart_toStartOf="@+id/signup_confirm"
                    app:layout_constraintTop_toBottomOf="@+id/signup_confirm">

                    <Button
                        android:id="@+id/signup_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/custom"
                        android:lineSpacingExtra="19.41sp"
                        android:padding="0dp"
                        android:text="@string/bt_signup"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/loginRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="8dp"
                    android:text="@string/tb_login_redirect"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/cv_button2"
                    app:layout_constraintStart_toStartOf="@+id/cv_button2"
                    app:layout_constraintTop_toBottomOf="@+id/cv_button2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
